--- a/TP5_GRUPO36/src/main/resources/templates/layouts/header.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/header.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 	<header style="background:white;margin:0;padding:10px;display:inline-flex;">
-		<img height="100px" alt="logo" src="https://www.unju.edu.ar/oferta2022/images/logo_unju.jpg" title="logo-unju">
+		<img height="100px" alt="logo" src="./imagenes/logo_unju.jpg" title="logo-unju">
 		<h1 style="margin-left: 30px;">Instituto Informático Jujuy</h1>		
 	</header>
 </body>
