--- a/TP5_GRUPO36/src/main/resources/static/css/style.css
+++ b/TP5_GRUPO36/src/main/resources/static/css/style.css
@@ -8,3 +8,44 @@ body {
 a {
 	text-decoration: none;
 }
+
+#form{
+	padding: 30px;
+	background-color: #24303c;
+	color: white;
+	border-radius: 20px;
+	font-size: 15px;
+	font-family:'calibri';
+	box-shadow: 7px 13px 37px #000;
+	
+	
+}
+
+#form .form-label{
+	padding-left: 5px;
+}
+
+#form .form-control{
+	padding: 12px;
+	border: solid 1px #0B0954 ;
+	background-color: black;
+	color: white;
+	
+}
+
+#form .form-select{
+	padding: 12px;
+	border: solid 1px #0B0954 ;
+	background-color: black;
+	color: white;
+}
+
+.container-sm-form{
+	margin: auto;
+	width: 100%;
+	height: 100%;
+	padding: 170px;
+	background-image: url("../imagenes/background.png");
+	background-size: 100%;
+}
+
