--- a/TP5_GRUPO36/src/main/resources/templates/contacto.html
+++ b/TP5_GRUPO36/src/main/resources/templates/contacto.html
@@ -1,49 +1,89 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Contacto</title>
+	<meta charset="utf-8">
+	<title>Contacto</title>
+	<!--hoja de estilos-->
+	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+	<!--Bootstrap  -->
+	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
 </head>
-<body>
+<body class="container" style="width: 100%; height: 100% ;">
 	<!-- header -->
 	<header th:replace="layouts/header :: header"></header>
 	
 	<!-- nav-lista sin ordenar -->
 	<nav th:replace="layouts/nav :: nav"></nav>
-	<h3 style="padding: 10px">Ingrese sus datos por favor: </h3>
 	
-	<!-- formulario -->
-	<form action="contacto.html" method="post" style="border: 1px solid; width: 450px; padding: 10px; margin: 20px" >
+	
+	<!-- formulario con Bootstrap -->
+	<div class="container-sm-form">
 		
-	  	Nombre y Apellido: 
-	  	<input type="text" name="nombreYapellido" /> <br><br>
-		Provincia:
-		<select name="provincia">
-			<option>Jujuy</option>
-			<option>Catamarca</option>
-			<option>Salta</option>
-			<option>Tucuman</option>
-			<option>La Rioja</option>
-			<option>Santiago del Estero</option>
-		</select><br><br>
-		Telefono: 
-		<input type="tel" name="telefono"/> <br><br>
-		Email: 
-		<input type="email" name="email" /> <br><br>
-		Estado Civil:<br>
-		
-		<input type="radio"/>Soltero <br>
-		<input type="radio"/>Casado <br>
-		<input type="radio"/>Otro <br>
-		<br><br>
-		Mensaje: 
-	  	<textarea name="mensaje" style="height: 25px"> </textarea> <br><br>
-		botón de envio: 
-		<input type="submit" name="boton" value="Enviar datos"> <br><br>
-	</form>
+		  <form action="contacto.html" method="post" class="row g-3" id="form">
+		  	  <h3 style="padding: 10px">INGRESE SUS DATOS </h3>
+			  <div class="col-sm-4">
+			    <label for="inputName" class="form-label">Nombre </label>
+			    <input type="text" class="form-control" id="inputName" placeholder="Ingrese su nombre">
+			  </div>
+			 <div class="col-sm-4">
+			    <label for="inputLastName" class="form-label">Apellido</label>
+			    <input type="text" class="form-control" id="inputLastName" placeholder="Ingrese su Apellido">
+			 </div>
+			 <div class="col-sm-4">
+			    <label for="inputPhone" class="form-label">Telefono</label>
+			    <input type="tel" class="form-control" id="inputPhone" placeholder="Ingrese su Telefono">
+			 </div>  
+			 <div class="col-sm-4">
+			    <label for="inputState" class="form-label">Provincia</label>
+			    <select id="inputState" class="form-select">
+			      <option>Jujuy</option>
+				  <option>Catamarca</option>
+				  <option>Salta</option>
+				  <option>Tucuman</option>
+				  <option>La Rioja</option>
+				  <option>Santiago del Estero</option>
+			    </select>
+			 </div>
+			  <div class="col-sm-4">
+			    <label for="inputAddress" class="form-label">Correo</label>
+			    <input type="text" class="form-control" id="inputAddress" placeholder="Ingrese su Correo">
+			  </div>
+			  <div class="col-sm-4"  >
+			  	<label for="inputCivilstatus" class="form-label">Estado Civil</label><br>
+			    <div class="form-check form-check-inline">
+				  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+				  <label class="form-check-label" for="inlineRadio1">Casado</label>
+				</div>
+				<div class="form-check form-check-inline">
+				  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+				  <label class="form-check-label" for="inlineRadio2">Soltero</label>
+				</div>
+				<div class="form-check form-check-inline">
+				  <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3" >
+				  <label class="form-check-label" for="inlineRadio3">Otro</label>
+				</div>
+			  </div>
+			 <div class="sm-3">
+  				<label for="mensaje" class="form-label">Mensaje </label>
+  				<textarea class="form-control" id="mensaje" rows="3"></textarea>
+			 </div>
+			  <div class="col-sm-12">
+			    <div class="form-check">
+			      <input class="form-check-input" type="checkbox" id="gridCheck">
+			      <label class="form-check-label" for="gridCheck"> Guardar </label>
+			    </div>
+			  </div>
+			  <div class="col-sm-12">
+			    <button type="submit" class="btn btn-primary">Enviar Datos</button>
+			  </div>
+		</form>
+	</div>
 	
 	<!-- footer -->
 	<footer th:replace="layouts/footer :: footer"></footer>
 	
+	<!--Bootstrap JS  -->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>	
 </body>
 </html>
