--- a/TP5_GRUPO36/src/main/resources/templates/agenda.html
+++ b/TP5_GRUPO36/src/main/resources/templates/agenda.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Agenda</title>
+	<meta charset="utf-8">
+	<title>Agenda</title>
+	<!--hoja de estilos-->
+	<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+	<!--Bootstrap  -->
+	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 </head>
-<body>
+<body class="container" style="width: 100%; height: 100% ;">
 
 	<header th:replace="layouts/header :: header"></header>
 	
 	<nav th:replace="layouts/nav :: nav"></nav>
-	
+	<div class="container-sm-form">
 	<div style="background:aqua;display:flex;flex-direction:row;margin-left: 20px;">
 		<video src="./videos/Homero estudiando.mp4" controls="controls" width="60%" style="display:block">
 		</video>
@@ -17,8 +21,12 @@
 			<p>La educación no es preparación para la vida, la educación es la vida misma. John Dewey.</p>
 		</section>
 	</div>
-	
+	</div>
 	<footer th:replace="layouts/footer :: footer"></footer>
+	
+	<!--Bootstrap JS  -->
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 	
 </body>
 </html>
