--- a/TP5_GRUPO36/src/main/resources/static/css/style.css
+++ b/TP5_GRUPO36/src/main/resources/static/css/style.css
@@ -5,9 +5,62 @@ body {
   margin-left: auto;
   font-family: "Recursive", sans-serif;
 }
-a {
-	text-decoration: none;
+
+header {
+	 background:white;
+	 margin:0;padding:10px;
+	 display:inline-flex;
 }
+nav{
+	 style="height: 60px;margin:0"
+}
+.logo {
+	height: 2.5em;
+	margin-right: 1em;
+}
+h1{
+	style: margin-left: 30px;
+}
+h3 {
+	style: padding: 10px;
+}
+ a {
+	text-decoration: none;
+	color: white;
+	text-align: center;
+    vertical-align:middle;"
+    padding: 14px 16px;
+}
+
+.box-video {
+	background:aqua;display:flex;flex-direction:row;margin-left: 20px;
+}
+video{
+	display:block;
+	width: 60%;
+}
+.text-video {
+	width: 40%;background:gray;display:block;padding: 10px;
+}
+
+form{
+	border: 1px solid; width: 450px; padding: 10px; margin: 20px;
+}
+footer {
+	background: black;
+	color:white;
+	margin:0;
+	height: 60px;
+	text-align: center;
+	padding:20px;
+}
+ul {
+	 background: black; font-family: Arial,white;width: 100%;height: 60px;line-height:60px;margin:0;
+}
+li {
+	display:inline;
+}
+
 
 #form{
 	padding: 30px;
@@ -48,4 +101,6 @@ a {
 	background-image: url("../imagenes/background.png");
 	background-size: 100%;
 }
+
+
 
