--- a/TP5_GRUPO36/src/main/resources/templates/layouts/footer.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/footer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-	<footer style="background: black;color:white;margin:0;height: 60px;text-align: center;padding:20px">
+	<footer>
 		<p>2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 - S. S. de Jujuy, República
 	Argentina.</p>
 	</footer>
