agregando link style y script

--- a/TP5_GRUPO36/src/main/resources/templates/beneficios.html
+++ b/TP5_GRUPO36/src/main/resources/templates/beneficios.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Beneficios</title>
+<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
+<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 	<!-- header -->
@@ -18,5 +20,6 @@
 	
 	<!-- footer -->
 	<footer th:replace="layouts/footer :: footer"></footer>
+	<script src="@{/webjars/bootstrap/js/bootstrap.bundle.min.css}"></script>
 </body>
 </html>
