--- a/TP5_GRUPO36/src/main/resources/static/css/style.css
+++ b/TP5_GRUPO36/src/main/resources/static/css/style.css
@@ -28,7 +28,7 @@ h3 {
 	text-decoration: none;
 	color: white;
 	text-align: center;
-    vertical-align:middle;"
+    vertical-align:middle;
     padding: 14px 16px;
 }
 
