--- a/TP5_GRUPO36/src/main/resources/templates/design.html
+++ b/TP5_GRUPO36/src/main/resources/templates/design.html
@@ -3,6 +3,8 @@
 <head>
 <meta charset="utf-8">
 <title>Diseno</title>
+<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
+<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
 <body>
 
@@ -83,6 +85,6 @@
 	</section>
 	
 	<footer th:replace="layouts/footer :: footer"></footer>
-	
+	<script src="@{/webjars/bootstrap/js/bootstrap.bundle.min.css}"></script>
 </body>
 </html>
