--- a/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
@@ -2,19 +2,17 @@
 <html lang='es'>
 <head>
 <meta charset="utf-8">
+
 </head>
 <body>
-	<nav style="height: 60px;margin:0">
-		<ul style="background: black; font-family: Arial,white;width: 100%;height: 60px;line-height:60px;margin:0">
-			<li style="display:inline;"><a href="/" style="color:white; text-decoration: none;text-align: center;
-  vertical-align:middle;">Inicio</a></li>
-			<li style="display:inline"><a href="/agenda" style="color:white; text-decoration: none;text-align: center;
-  padding: 14px 16px;">Agenda</a></li>
-			<li style="display:inline"><a href="/beneficios" style="color:white; text-decoration: none;text-align: center;
-  padding: 14px 16px;">Beneficios y Becas</a></li>
-			<li style="display:inline"><a href="/contacto" style="color:white; text-decoration: none;text-align: center;
-  padding: 14px 16px;">Contáctanos</a></li>
+	<nav>
+		<ul>
+			<li><a href="/">Inicio</a></li>
+			<li><a href="/agenda">Agenda</a></li>
+			<li><a href="/beneficios">Beneficios y Becas</a></li>
+			<li><a href="/contacto">Contáctanos</a></li>
 		</ul>
 	</nav>
+	
 </body>
 </html>
