corrigiendo script bootstrap

--- a/TP5_GRUPO36/src/main/resources/templates/agenda.html
+++ b/TP5_GRUPO36/src/main/resources/templates/agenda.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='es' xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Agenda</title>
@@ -10,7 +10,7 @@
 
 	<header th:replace="layouts/header :: header"></header>
 	
-	<nav th:replace="layouts/nav :: nav"></nav>
+	
 	
 	<div class="box-video">
 		<video src="./videos/Homero estudiando.mp4" controls="controls">
@@ -21,7 +21,7 @@
 	</div >
 	
 	<footer th:replace="layouts/footer :: footer"></footer>
-	<script src="@{/webjars/bootstrap/js/bootstrap.bundle.min.css}"></script>
+	
 	
 </body>
 </html>
