--- a/TP5_GRUPO36/src/main/resources/templates/beneficios.html
+++ b/TP5_GRUPO36/src/main/resources/templates/beneficios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='es' xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Beneficios</title>
@@ -11,7 +11,7 @@
 	<header th:replace="layouts/header :: header"></header>
 	
 	<!-- nav -->
-	<nav th:replace="layouts/nav :: nav"></nav>
+	
 	
 	<!-- section -->
 	<section>
@@ -20,6 +20,6 @@
 	
 	<!-- footer -->
 	<footer th:replace="layouts/footer :: footer"></footer>
-	<script src="@{/webjars/bootstrap/js/bootstrap.bundle.min.css}"></script>
+	
 </body>
 </html>
