--- a/TP5_GRUPO36/src/main/resources/templates/design.html
+++ b/TP5_GRUPO36/src/main/resources/templates/design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='es' xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 <title>Diseno</title>
@@ -10,7 +10,7 @@
 
 	<header th:replace="layouts/header :: header"></header>
 	
-	<nav th:replace="layouts/nav :: nav"></nav>
+	
 	
 	<section>
 
@@ -85,6 +85,6 @@
 	</section>
 	
 	<footer th:replace="layouts/footer :: footer"></footer>
-	<script src="@{/webjars/bootstrap/js/bootstrap.bundle.min.css}"></script>
+	
 </body>
 </html>
