--- a/TP5_GRUPO36/src/main/resources/templates/contacto.html
+++ b/TP5_GRUPO36/src/main/resources/templates/contacto.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang='es' xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8">
 	<title>Contacto</title>
@@ -12,8 +12,7 @@
 	<!-- header -->
 	<header th:replace="layouts/header :: header"></header>
 	
-	<!-- nav-lista sin ordenar -->
-	<nav th:replace="layouts/nav :: nav"></nav>
+	
 	
 	
 	<!-- formulario con Bootstrap -->
@@ -84,6 +83,6 @@
 	
 	<!--Bootstrap JS  -->
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>	
+	
 </body>
 </html>
