--- a/TP5_GRUPO36/src/main/resources/templates/layouts/footer.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/footer.html
@@ -1,17 +1,15 @@
 <!DOCTYPE html>
-<html lang='es'>
+<html lang='es' xmlns:th="http://www.thymeleaf.org"s>
 <head>
 <meta charset="utf-8">
 </head>
 <body>
 
-	<footer>
-		<p>2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 - S. S. de Jujuy, República
+	<footer class=" navbar-dark bg-dark">
+		<p class="text-center">2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 - S. S. de Jujuy, República
 	Argentina.</p>
+	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	</footer >
 	
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>	
-	</footer>
-	<script src="@{/webjars/bootstrap/js/bootstrap.bundle.min.css}"></script>
 </body>
 </html>
