--- a/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
@@ -1,18 +1,32 @@
 <!DOCTYPE html>
-<html lang='es'>
+<html lang='es' xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="utf-8">
 
 </head>
 <body>
-	<nav>
-		<ul>
-			<li><a href="/">Inicio</a></li>
-			<li><a href="/agenda">Agenda</a></li>
-			<li><a href="/beneficios">Beneficios y Becas</a></li>
-			<li><a href="/contacto">Contáctanos</a></li>
-		</ul>
-	</nav>
-	
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/">Inicio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/agenda">Agenda</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/beneficios">Beneficios y Becas</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/contacto">Contáctanos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
 </body>
 </html>
