--- a/TP5_GRUPO36/src/main/resources/templates/layouts/footer.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/footer.html
@@ -5,8 +5,8 @@
 </head>
 <body>
 
-	<footer class=" navbar-dark bg-dark">
-		<p class="text-center">2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 - S. S. de Jujuy, República
+	<footer class="bg-dark">
+		<p class="text-center text-break text-white">2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 - S. S. de Jujuy, República
 	Argentina.</p>
 	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 	</footer >
