--- a/TP5_GRUPO36/src/main/resources/templates/agenda.html
+++ b/TP5_GRUPO36/src/main/resources/templates/agenda.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
 
 </head>
-<body class="container" style="width: 100%; height: 100% ;">
+<body class="container">
 
 	<header th:replace="layouts/header :: header"></header>
 	
