--- a/TP5_GRUPO36/src/main/resources/templates/design.html
+++ b/TP5_GRUPO36/src/main/resources/templates/design.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>	
 <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 </head>
-<body>
+<body class="container">
 
 	<header th:replace="layouts/header :: header"></header>
 	
