--- a/TP5_GRUPO36/src/main/resources/templates/layouts/footer.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/footer.html
@@ -6,9 +6,11 @@
 <body>
 
 	<footer class="bg-dark">
-		<p class="text-center text-break text-white">2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 - S. S. de Jujuy, República
+		<p class="text-center text-break text-white mb-0">2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 – Teléfono (388) 999999 - S. S. de Jujuy, República
 	Argentina.</p>
-	<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
+	
+	<script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.bundle.min.js"></script>
+	
 	</footer >
 	
 </body>
