--- a/TP5_GRUPO36/src/main/resources/templates/layouts/header.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/header.html
@@ -5,13 +5,15 @@
 </head>
 <body>
 	<header>
-	<div class="container-fluid navbar-light bg-light">
-	<a class="navbar-brand " href="/">
-		<img class="logo d-inline-block align-text-top" alt="logo" src="./imagenes/logo_unju.jpg" title="logo-unju">
-		Instituto Informático Jujuy
-		 </a>
+	<div class="encabezado bg-light">
+	<a class="navbar-brand text-dark" href="/">
+		<img class="logo" alt="logo" src="./imagenes/logo_unju.jpg" title="logo-unju">
+		<p class="fs-3 fw-bolder">Informático Jujuy</p>
+	</a>
   	</div>
-     <nav th:replace="layouts/nav :: nav"></nav>
+  	<nav th:replace="layouts/nav :: nav"></nav>
+  	
+     
    
 	</header>
 	
