--- a/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="/agenda">Agenda</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/beneficios">Beneficios y Becas</a>
+          <a class="nav-link" href="/beca/beneficios">Beneficios y Becas</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/contacto">Contáctanos</a>
