--- a/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
@@ -24,6 +24,24 @@
         <li class="nav-item">
           <a class="nav-link" href="/contacto">Contáctanos</a>
         </li>
+        
+                
+        <!-- boton desplegable DATOS -->
+		<li class="btn-group">
+		  <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+		    Datos
+		  </button>
+		  <ul class="dropdown-menu">
+		    <li><a class="dropdown-item" href="#">Docentes</a></li>
+		    <li><a class="dropdown-item" href="#">Alumnos</a></li>
+		    <li><hr class="dropdown-divider"></li>
+		    <li><a class="dropdown-item" th:href="@{/beca}" >Becas</a></li>
+		    <li><a class="dropdown-item" th:href="@{/curso}">Cursos</a></li>
+		  </ul>
+		</li>
+        
+        
+        
       </ul>
     </div>
   </div>
