--- a/TP5_GRUPO36/src/main/resources/templates/beneficios.html
+++ b/TP5_GRUPO36/src/main/resources/templates/beneficios.html
@@ -15,7 +15,7 @@
 
 
 	<!-- section -->
-	<section class="container-sm-form">
+	<section class="container-sm-form listado">
 		<table class="table table-striped table-dark">
 			<thead>
 				<tr>
