--- a/TP5_GRUPO36/src/main/resources/templates/lista_becas.html
+++ b/TP5_GRUPO36/src/main/resources/templates/lista_becas.html
@@ -12,38 +12,40 @@
 	<header th:replace="layouts/header :: header"></header>
 
 	<!-- section -->
-	<section class="container-sm-form">
-		<h3 class="text-center text-white">LISTA DE BECAS</h3>
+	<section class="container-sm-form listado">
+		<h3 class="text-center text-white">LISTADO DE BECAS</h3>
 		<div class="row">
 		<div class="d-grid gap-2 d-sm-flex justify-content-sm-end">
-			<a th:href="@{/beca}" type="button" class="btn btn-primary">Nuevo</a>
+			<a th:href="@{/beca/nuevo}" type="button" class="btn btn-primary">Nuevo</a>
 		</div></div>
 		<br>
-		<table class="table table-striped table-dark">
-			<thead>
-				<tr>
-					<th scope="col">Codigo</th>
-					<th scope="col">Nombre de Curso</th>
-					<th scope="col">Fecha de Inicio</th>
-					<th scope="col">Fecha de Cierre</th>
-					<th scope="col">Estado</th>
-					<th scope="col">Opciones</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr th:each="beca : ${becas}" >
-					<td th:text="${beca.codigo}"></td>
-<!-- 					<td th:text="${beca.curso.titulo}"></td> -->
-					<td th:text="${#temporals.format(beca.fechaInicio,'dd/MM/yyyy')}"></td>
-					<td th:text="${#temporals.format(beca.fechaCierre,'dd/MM/yyyy')}"></td>
-					<td th:text="${beca.estado}"></td>
-					<td>
-						<button type="button" class="btn btn-warning">Editar</button>
-						<button type="button" class="btn btn-danger">Eliminar</button>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+		<div class="table-responsive">
+			<table class="table table-striped table-dark">
+				<thead>
+					<tr>
+						<th scope="col">Codigo</th>
+						<th scope="col">Nombre de Curso</th>
+						<th scope="col">Fecha de Inicio</th>
+						<th scope="col">Fecha de Cierre</th>
+						<th scope="col">Estado</th>
+						<th scope="col">Opciones</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="beca : ${becas}" >
+						<td th:text="${beca.codigo}"></td>
+						<td th:text="${beca.curso.titulo}"></td>
+						<td th:text="${#temporals.format(beca.fechaInicio,'dd/MM/yyyy')}"></td>
+						<td th:text="${#temporals.format(beca.fechaCierre,'dd/MM/yyyy')}"></td>
+						<td th:text="${beca.estado}"></td>
+						<td>
+							<button type="button" class="btn btn-warning">Editar</button>
+							<button type="button" class="btn btn-danger">Eliminar</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div><!-- fin table responsive -->
 	</section>
 
 	<!-- footer -->
