--- a/TP5_GRUPO36/src/main/resources/templates/listaCursos.html
+++ b/TP5_GRUPO36/src/main/resources/templates/listaCursos.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
 	</head>
 	
-	<body class="container" style="padding: 50px;">
+	<body class="container-sm-form" style="padding: 50px;">
 		<header th:replace="/layouts/header :: header"></header>
 		<div class="container">
 			<br>
@@ -18,30 +18,33 @@
 			</div>
 			<br>
 			<div class="col-12 d-flex justify-content-center">
-				<table  class="table table-striped table-hover">
+				<table  class="table table-striped table-dark">
 						<tr>
 							<th>codigo</th>
 							<th>titulo</th>                    
 							<th>categoria</th>
-							<th>fechaInicio</th>
-							<th>fechaFinal</th>
+							<th>Inicio</th>
+							<th>Final</th>
 							<th>cantidadHoras</th>
-							<th>modalidad</th>
-							<th>docente</th>
+							<th>Docente</th>
+							<th>Modalidad</th>
 						</tr>	
-						<tr th:each="c: ${curso}">
-							<td th:text="${c.codigo}"></td>
-							<td th:text="${c.titulo}"></td>
-							<td th:text="${c.categoria}"></td>
-							<td th:text="${#temporals.format(c.fechaInicio,'dd/MM/yyyy')}"></td>
-							<td th:text="${#temporals.format(c.fechaInicio,'dd/MM/yyyy')}"></td>
-						    <td th:text="${c.cantidadHoras}"></td>
-							<!-- <td th:text="${c.modalidad}"></td> -->
-							<!-- <td th:text="${c.docente.apellido}"></td> -->
+						<tr th:each="curso: ${cursos}">
+							<td th:text="${curso.codigo}"></td>
+							<td th:text="${curso.titulo}"></td>
+							<td th:text="${curso.categoria}"></td>
+							<td th:text="${#temporals.format(curso.fechaInicio, 'dd/MM/yyyy')}"></td>
+							<td th:text="${#temporals.format(curso.fechaFinal, 'dd/MM/yyyy')}"></td>
+							<td th:text="${curso.cantidadHoras}"></td>
+							<td th:text="${curso.docente.apellido}+', '+${curso.docente.nombre}"></td>
+							<td th:text="${curso.modalidad}"></td>
+							
 							<td>
-							<a href="#" id="editarCurso" class="btn btn-warning">Editar</a>
-							<a href="#" id="eliminarCurso" class="btn btn-danger">Eliminar</a>
-						</td>
+								<a th:href="@{#}" id="editarCurso" class="btn btn-warning">Editar</a>
+								<a th:href="@{#}" id="eliminarCurso" class="btn btn-danger">Eliminar</a>
+								
+							</td>
+						
 						</tr>
 					</table>
 				<br><br>
