--- a/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
@@ -33,7 +33,7 @@
 		  </button>
 		  <ul class="dropdown-menu">
 		    <li><a class="dropdown-item" href="#">Docentes</a></li>
-		    <li><a class="dropdown-item" href="#">Alumnos</a></li>
+		    <li><a class="dropdown-item" th:href="@{/alumno}">Alumnos</a></li>
 		    <li><hr class="dropdown-divider"></li>
 		    <li><a class="dropdown-item" th:href="@{/beca}" >Becas</a></li>
 		    <li><a class="dropdown-item" th:href="@{/curso}">Cursos</a></li>
