se agrego servicios,anotaciones y se habilito eliminar y editar.

--- a/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
+++ b/TP5_GRUPO36/src/main/resources/templates/layouts/nav.html
@@ -36,7 +36,7 @@
 		    <li><a class="dropdown-item" th:href="@{/alumno}">Alumnos</a></li>
 		    <li><hr class="dropdown-divider"></li>
 		    <li><a class="dropdown-item" th:href="@{/beca/listado}" >Becas</a></li>
-		    <li><a class="dropdown-item" th:href="@{/curso}">Cursos</a></li>
+		    <li><a class="dropdown-item" th:href="@{/curso/lista}">Cursos</a></li>
 		  </ul>
 		</li>
         
