--- a/TP5_GRUPO36/src/main/resources/templates/listaCursos.html
+++ b/TP5_GRUPO36/src/main/resources/templates/listaCursos.html
@@ -40,8 +40,8 @@
 							<td th:text="${curso.modalidad}"></td>
 							
 							<td>
-								<a th:href="@{#}" id="editarCurso" class="btn btn-warning">Editar</a>
-								<a th:href="@{#}" id="eliminarCurso" class="btn btn-danger">Eliminar</a>
+								<a th:href="@{/curso/editar/}+${curso.codigo}" id="editarCurso" class="btn btn-warning">Editar</a>
+								<a th:href="@{/curso/eliminar/}+${curso.codigo}" id="eliminarCurso" class="btn btn-danger">Eliminar</a>
 								
 							</td>
 						
